IntelHLS/logs/example1_test3.txt
example/example1_test3.c:10:9: warning: variable 'b' is uninitialized when used here [-Wuninitialized]
        return b;
               ^
example/example1_test3.c:8:8: note: initialize the variable 'b' to silence this warning
        int *b;
              ^
               = nullptr
example/example1_test3.c:18:6: error: assigning to 'int *' from incompatible type 'const int *'
        b = test(a);    
            ^~~~~~~
1 warning and 1 error generated.
HLS FPGA Parse FAILED.
